src/test/ui/issues/issue-17728.stderr
error[E0623]: lifetime mismatch
  --> $DIR/issue-17728.rs:15:28
   |
LL |     fn attemptTraverse(&self, room: &Room, directionStr: &str) -> Result<&Room, &str> {
   |                                     -----                         -------------------
   |                                     |
   |                                     this parameter and the return type are declared with different lifetimes...
...
LL |             Some(entry) => Ok(entry),
   |                            ^^^^^^^^^ ...but data from `room` is returned here

error[E0308]: match arms have incompatible types
  --> $DIR/issue-17728.rs:100:5
   |
LL | /     match to_parse { //~ ERROR match arms have incompatible types
LL | |         "w" | "west" => RoomDirection::West,
LL | |         "e" | "east" => RoomDirection::East,
LL | |         "n" | "north" => RoomDirection::North,
...  |
LL | |         _ => None
   | |              ---- match arm with an incompatible type
LL | |     }
   | |_____^ expected enum `RoomDirection`, found enum `std::option::Option`
   |
   = note: expected type `RoomDirection`
              found type `std::option::Option<_>`

error: aborting due to 2 previous errors

Some errors occurred: E0308, E0623.
For more information about an error, try `rustc --explain E0308`.
